<resources>
    <string name="app_name"> AnneFlix </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_notifications">A propos de nous</string>
    <string name="home_second">%1$s</string>
    <string name="notre_quipe">Notre équipe:</string>
    <string name="nisserine_ezzaimi">Nisserine EZZAIMI</string>
    <string name="tessir_fahmi_ali">Tessir FAHMI ALI</string>
    <string name="pauline_ghirlanda">Pauline GHIRLANDA</string>
    <string name="adeline_feurte">Adeline FEURTÉ</string>
    <string name="lien_github">Lien github de notre projet</string>
    <string name="lien_git">https://github.com/Nisserine-19/the-movie-app-1.git</string>
    <string name="resumeapp">Base de donnée utilisée pour l\'application AnneFlix :</string>
    <string name="themoviedbname">TheMovieDB</string>
    <string name="fonctionapp">La liste des fonctionnalités de notre application :</string>
    <string name="fonction2">- Affichage des catégories de films.</string>
    <string name="fonction3">- Affichage des films par catégorie avec le détail de ces deniers. Cela comprends l\'affiche, le nom, la date de sortie, la durée, la langue, la note, les compagnies de production, le résumé, les films similaires et les bandes annonces (3 max) du film.</string>
    <string name="fonction4">- Cette vue \'A propose de nous\'.</string>
    <string name="fonction5">- La possibilité de mettre les films en favoris.</string>
    <string name="fonction6">- Affichage des films favoris.</string>
    <string name="image_du_film">Image du film</string>
    <string name="image_de_font_du_film">Image de font du film</string>
    <string name="home_third">%1$s</string>
    <string name="dashboard_second">%1$s</string>
    <string name="title_dashboard_second">%1$s</string>
    <string name="text_category">Actions et Aventures</string>
    <string name="text_film_recycler">Actions et Aventures Actions et Aventures Actions et Aventures</string>
    <string name="favorite">Favoris</string>
    <string name="similar">Similar</string>
    <string name="similar_movies">Similar movies</string>
    <string name="temps">2:15 / 135 min</string>
    <string name="production_company_companies">Production company/companies</string>
    <string name="overview">Overview</string>
    <string name="trailer_s">Trailer(s)</string>

</resources>