<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeThirdFragment"
            app:destination="@id/navigation_home_third" />
        <argument
            android:name="myArg"
            app:argType="string" />
        <argument
            android:name="mytitle"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_third"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeThirdFragment"
        tools:layout="@layout/fragment_home_third">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeThirdFragment"
            app:destination="@id/navigation_home_second" />
        <action
            android:id="@+id/action_DashboardFragment_to_DashboardSecondFragment"
            app:destination="@id/navigation_dashboard_second" />
        <argument
            android:name="idmovie"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_DashboardFragment_to_DashboardSecondFragment"
            app:destination="@id/navigation_dashboard_second" />
        <argument
            android:name="idmovie"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard_second"
        android:name="com.gmail.eamosse.imdb.ui.dashboard.DashboardSecondFragment"
        android:label="@string/title_dashboard_second"
        tools:layout="@layout/fragment_dashboard_second">
        <action
            android:id="@+id/action_DashboardSecondFragment_to_DashboardFragment"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_DashboardFragment_to_DashboardSecondFragment"
            app:destination="@id/navigation_dashboard_second" />
        <argument
            android:name="idmovie"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.aProposFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.gmail.eamosse.imdb.ui.favoris.FavorisFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favoris"
        >
        <action
            android:id="@+id/action_Favoris_to_HomeThirdFragment"
            app:destination="@id/navigation_home_third" />
    </fragment>
</navigation>