<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.DashboardSecondFragment"
            tools:ignore="MissingConstraints">

            <ToggleButton
                android:id="@+id/toggle_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/favorite_toggle"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/font_film"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_de_font_du_film" />

            <androidx.cardview.widget.CardView
                android:id="@+id/vue_font"
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/font">

                <ImageView
                    android:id="@+id/image_film"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_du_film" />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4"/>

            <TextView
                android:id="@+id/titre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vue_font"
                app:layout_constraintTop_toBottomOf="@id/font" />

            <TextView
                android:id="@+id/date_sortie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#757575"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/titre"
                app:layout_constraintTop_toBottomOf="@id/titre" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="rang, date_sortie" />

            <TextView
                android:id="@+id/resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <RatingBar
                android:id="@+id/rang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/vue_font"
                app:layout_constraintStart_toStartOf="@id/vue_font"
                app:layout_constraintTop_toBottomOf="@id/vue_font"/>

            <TextView
                android:id="@+id/similar_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/similar"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/resume"
                />

            <TextView
                android:id="@+id/similar_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/similar_movies"
                app:layout_constraintTop_toBottomOf="@id/similar_txt"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/similar_txt2"
                tools:listitem="@layout/similar_list_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>